<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/clear_list"
        android:title="Clear List" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="Log Out"/>
</menu>